Implement new version of angular

--- a/src/app/activities/activities.component.html
+++ b/src/app/activities/activities.component.html
@@ -1,29 +1,31 @@
-<div id="activities">
-    <section>
-        <h2>Áreas de exercício preferencial</h2>
-        <h3>Direito Comercial / Empresarial</h3>
-        <h3>Direito Comercial Internacional</h3>
-        <h3>Direito das Sociedades</h3>
-        <h3>Direito dos Contratos</h3>
-        <h3>Direito dos Transportes</h3>
-        <h3>Direito dos Seguros</h3>
-        <h3>Direito Bancário</h3>
-        <h3>Direito do Consumo</h3>
-        <h3>Direito da União Europeia</h3>
-        <h3>Direito da Família</h3>
-        <h3>Direito Reais</h3>
-        <h3>Direito do Turismo</h3>
-        <h3>Direito do Trabalho</h3>
-        <h3>Direito da Propriedade Intelectual</h3>
-    </section>
-    <section>
-        <h2>Outras áreas de actuação</h2>
-        <h3>Direito Administrativo</h3>
-        <h3>Direito do Urbanismo</h3>
-        <h3>Direito do Ambiente</h3>
-        <h3>Direito Fiscal</h3>
-        <h3>Direito Criminal</h3>
-        <h3>Direito Registral e Notarial</h3>
-        <h3>Direito dos Valores Mobiliários</h3>
-    </section>
-</div>
+<section>
+  <h3>Áreas de exercício preferencial</h3>
+  <ul>
+    <li>Direito Comercial / Empresarial</li>
+    <li>Direito Comercial Internacional</li>
+    <li>Direito das Sociedades</li>
+    <li>Direito dos Contratos</li>
+    <li>Direito dos Transportes</li>
+    <li>Direito dos Seguros</li>
+    <li>Direito Bancário</li>
+    <li>Direito do Consumo</li>
+    <li>Direito da União Europeia</li>
+    <li>Direito da Família</li>
+    <li>Direito Reais</li>
+    <li>Direito do Turismo</li>
+    <li>Direito do Trabalho</li>
+    <li>Direito da Propriedade Intelectual</li>
+  </ul>
+</section>
+<section class="pt-3">
+  <h3>Outras áreas de actuação</h3>
+  <ul>
+    <li>Direito Administrativo</li>
+    <li>Direito do Urbanismo</li>
+    <li>Direito do Ambiente</li>
+    <li>Direito Fiscal</li>
+    <li>Direito Criminal</li>
+    <li>Direito Registral e Notarial</li>
+    <li>Direito dos Valores Mobiliários</li>
+  </ul>
+</section>
