--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<div class="page-wrap">
-<cs-navigation></cs-navigation>
- <div class="main-content">
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
-</div>
-</div>
-<cs-footer></cs-footer> 
+<!--Navigation-->
+<app-header></app-header>
+<!--Content-->
+<main role="main" class="container">
+  <router-outlet></router-outlet>
+</main>
+<!--Footer-->
+<app-footer></app-footer>
