--- a/src/app/curriculum/curriculum.component.html
+++ b/src/app/curriculum/curriculum.component.html
@@ -1,49 +1,47 @@
-<div id="curriculum">
-  <section>
-    <h2>Formação académica</h2>
-    <p>Licenciado em Direito.</p>
-    <p>Pós-graduado em “Direito Bancário, da Bolsa e Seguros”.</p>
-    <p>Mestre em Direito.</p>
-    <p>Atualmente, é Doutorando em Direito na Faculdade de Direito da Universidade de Coimbra</p>
-  </section>
-  <section>
-    <h2>Formação profissional</h2>
-    <p>Curso de Direito do Consumo, promovido pela DECO- Associação Portuguesa para a Defesa do Consumidor. </p>
-  </section>
-  <section>
-    <h2>Experiência profissional</h2>
-    <p style="font-weight:bold;">Actual:</p>
-    <ol>
-      <li>Advogado com inscrição em vigor.</li>
-      <li>
-        Na <a target="_blank" href="http://www.ulp.pt/" Title="Universidade Lusófona do Porto">Universidade Lusófona do
-          Porto:</a>
-        <ol type="a" style="padding-left: 10px;">
-          <li>Docente: leciona Teoria Geral do Direito Civil, Direito Comercial, Direito das Sociedades Comerciais e
-            Direito Internacional Privado. Anteriormente, lecionou Introdução ao Direito, Introdução ao Direito do
-            Trabalho, Direito do Trabalho e da Segurança Social, Direito das Coisas, Direito Europeu e Direito
-            Internacional Público.
-          </li>
-          <li>Diretor do “Curso de Preparação para o Exame de Agregação da Ordem dos Advogados”; Docente responsável
-            pelo modulo de “Deontologia Profissional”.</li>
-          <li>Assessor da Direção da Faculdade de Direito e Ciência Política (2014-2018);</li>
-          <li>Membro do Conselho Científico da Faculdade de Direito e Ciência Politica (com funções de secretário);</li>
-          <li>Membro do Conselho Pedagógico da Faculdade de Direito e Ciência Politica (com funções de secretário);</li>
-        </ol>
-      </li>
-      <li>Juiz-Árbitro em Tribunais Arbitrais de Consumo (<a href="http://www.ciab.pt/pt" target="_blank">CIAB</a> e <a
-          href="http://www.triave.pt/" target="_blank">TRIAVE</a>).</li>
-      <li>Membro do Conselho Coordenador do ONAT-Observatório Nacional das Atividades de Animação Turística.</li>
-      <li>Formador certificado na área do Direito.</li>
-    </ol>
-    <p style="font-weight:bold;">Anterior:</p>
-    <ol>
-      <li>Vereador da Câmara Municipal de Barcelos no mandato 2009/2013 (com os pelouros atribuídos de Ambiente,
-        Trânsito, Turismo e Artesanato).</li>
-      <li>Vice-Presidente do CIAB-Tribunal Arbitral de Consumo no quadriénio 2009/2013.</li>
-      <li>Docente do IPCA-Instituto Politécnico do Cávado e Ave em 2008/2009.</li>
-      <li>Membro do GITUR-Grupo de Investigação em Turismo (IPL-Instituto Politécnico de Leiria).</li>
-      <li>Participação em Palestras, Conferências e Congressos, essencialmente no domínio do Direito e do Turismo.</li>
-    </ol>
-  </section>
-</div>
+<section>
+  <h3>Formação académica</h3>
+  <p>Licenciado em Direito.</p>
+  <p>Pós-graduado em “Direito Bancário, da Bolsa e Seguros”.</p>
+  <p>Mestre em Direito.</p>
+  <p>Atualmente, é Doutorando em Direito na Faculdade de Direito da Universidade de Coimbra</p>
+</section>
+<section class="pt-4">
+  <h3>Formação profissional</h3>
+  <p class="mt-2">Curso de Direito do Consumo, promovido pela DECO- Associação Portuguesa para a Defesa do Consumidor. </p>
+</section>
+<section class="pt-4">
+  <h3>Experiência profissional</h3>
+  <p class="font-weight-bold">Actual:</p>
+  <ol>
+    <li>Advogado com inscrição em vigor.</li>
+    <li>
+      Na <a target="_blank" href="http://www.ulp.pt/" Title="Universidade Lusófona do Porto">Universidade Lusófona do
+        Porto:</a>
+      <ol type="a" style="padding-left: 10px;">
+        <li>Docente: leciona Teoria Geral do Direito Civil, Direito Comercial, Direito das Sociedades Comerciais e
+          Direito Internacional Privado. Anteriormente, lecionou Introdução ao Direito, Introdução ao Direito do
+          Trabalho, Direito do Trabalho e da Segurança Social, Direito das Coisas, Direito Europeu e Direito
+          Internacional Público.
+        </li>
+        <li>Diretor do “Curso de Preparação para o Exame de Agregação da Ordem dos Advogados”; Docente responsável
+          pelo modulo de “Deontologia Profissional”.</li>
+        <li>Assessor da Direção da Faculdade de Direito e Ciência Política (2014-2018);</li>
+        <li>Membro do Conselho Científico da Faculdade de Direito e Ciência Politica (com funções de secretário);</li>
+        <li>Membro do Conselho Pedagógico da Faculdade de Direito e Ciência Politica (com funções de secretário);</li>
+      </ol>
+    </li>
+    <li>Juiz-Árbitro em Tribunais Arbitrais de Consumo (<a href="http://www.ciab.pt/pt" target="_blank">CIAB</a> e <a
+        href="http://www.triave.pt/" target="_blank">TRIAVE</a>).</li>
+    <li>Membro do Conselho Coordenador do ONAT-Observatório Nacional das Atividades de Animação Turística.</li>
+    <li>Formador certificado na área do Direito.</li>
+  </ol>
+  <p class="font-weight-bold">Anterior:</p>
+  <ol>
+    <li>Vereador da Câmara Municipal de Barcelos no mandato 2009/2013 (com os pelouros atribuídos de Ambiente,
+      Trânsito, Turismo e Artesanato).</li>
+    <li>Vice-Presidente do CIAB-Tribunal Arbitral de Consumo no quadriénio 2009/2013.</li>
+    <li>Docente do IPCA-Instituto Politécnico do Cávado e Ave em 2008/2009.</li>
+    <li>Membro do GITUR-Grupo de Investigação em Turismo (IPL-Instituto Politécnico de Leiria).</li>
+    <li>Participação em Palestras, Conferências e Congressos, essencialmente no domínio do Direito e do Turismo.</li>
+  </ol>
+</section>
