--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,22 +1,14 @@
-<footer>
-    <div class="footer-content">
-        <div class="navigation">
-            <div class="container-fluid">
-                <div class="col-md-3 col-sm-6 item" routerLinkActive="active"><a [routerLink]="['/curriculo']"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Curriculo</a></div>
-                <div class="col-md-3 col-sm-6 item" routerLinkActive="active"><a [routerLink]="['/areas-de-actividade']"><i class="fa fa-briefcase" aria-hidden="true"></i>Áreas de Actividade</a></div>
-                <div class="col-md-3 col-sm-6 item" routerLinkActive="active"><a [routerLink]="['/publicações']"><i class="fa fa-book" aria-hidden="true"></i>Publicações</a></div>
-                <div class="col-md-3 col-sm-6 item" routerLinkActive="active"><a [routerLink]="['/contactos']"><i class="fa fa-phone" aria-hidden="true"></i>Contacto</a></div>
-            </div>
-        </div>
-        <div class="contacts">
-            <div class="container-fluid">
-                <div class="pull-left">César Pires - Advogado</div>
-                <div class="pull-right">
-                    <span class="phone">Tel.: (+351) 91 90 03 008</span>
-                    <span class="hidden-xs"> /</span>
-                    <span class="email">E-mail: <a href="mailto:cesarpires-10865p@adv.oa.pt">cesarpires-10865p@adv.oa.pt</a></span>
-                </div>
-            </div>
-        </div>
+<footer class="footer">
+  <div class="container">
+    <div class="row pt-3 pb-3 pt-sm-0 pb-sm-0">
+      <div class="col-12 col-sm-4 col-lg-6 p-sm-0">
+        César Pires - Advogado
+      </div>
+      <div class="col-12 col-sm-8 col-lg-6 text-sm-right p-sm-0">
+        <span class="d-block d-sm-inline">Tel.: <a href="tel:+351919003008">(+351) 91 90 03 008</a></span>
+        <span class="d-none d-sm-inline"> / </span>
+        <span class="d-block d-sm-inline">E-mail: <a href="mailto:cesarpires-10865p@adv.oa.pt">cesarpires-10865p@adv.oa.pt</a></span>
+      </div>
     </div>
+  </div>
 </footer>
