--- a/src/app/publications/publications.component.html
+++ b/src/app/publications/publications.component.html
@@ -1,29 +1,36 @@
-<div id="publications">
-  <section>
-    <h2>Publicações</h2>
-    <p>
-      Pires, César M.F., 2016,
-      <a href="http://idibe.org/wp-content/uploads/2013/09/N%C2%BA-4-.pdf" title="Actualidad Jurídica Ibéroamericana"
-        target="_blank">“A transferência (Inter)nacional da sede da Sociedade Anónima Europeia”</a>,
-      Actualidad Jurídica Ibéroamericana, N.º 4, febrero de 2016.
-    </p>
-    <p>
-      Pires, César M. F. 2013. <a target="_blank"
-        href="http://revistas.ulusofona.pt/index.php/rfdulp/article/view/3251">"A lei aplicável à sociedade anónima
-        europeia (societas europaea)" </a>,
-      Revista da Faculdade de Direito da Universidade Lusófona do Porto 2, 2: 117 – 134
-    </p>
-    <p>
-      Pires, César M. F. 2007. "A Oferta Pública de Aquisição Tendente ao Domínio Total", Reflexões-Revista Cientifica
-      da Universidade
-      Lusófona do Porto, 2: 95 - 116 (<a href="/docs/article1.pdf" target="_blank">PDF</a>)
-    </p>
-  </section>
-  <section>
-    <h2>Projectos Científicos</h2>
-    <p>
-      No âmbito de um projecto conjunto com outros docentes e investigadores criou o ONAT-Observatório Nacional das
-      Actividades de Animação Turística.
-    </p>
-  </section>
-</div>
+<section>
+  <h3>Publicações</h3>
+  <p>
+    Pires, César M.F. / Oliveira, António Cândido de, 2017 (Orgs.) “O ESTADO DA JUSTIÇA”, Edições Universitárias Lusófonas.
+  </p>
+  <p>
+    Pires, César M.F., 2017,
+    <a href="https://www.linkedin.com/redir/redirect?url=http%3A%2F%2Fwww%2Erevista-aji%2Ecom%2Farticulos%2F2017%2F174-195%2Epdf&amp;urlhash=zEUU&trk=public_profile_publication-title" title="A Posição jurídica do devedor face ao contrato de factoring"
+    target="_blank">“A Posição jurídica do devedor face ao contrato de factoring”</a>,
+    Actualidad Jurídica Iberoamericana.
+  </p>
+  <p>
+    Pires, César M.F., 2016,
+    <a href="http://idibe.org/wp-content/uploads/2013/09/N%C2%BA-4-.pdf" title="Actualidad Jurídica Ibéroamericana"
+      target="_blank">“A transferência (Inter)nacional da sede da Sociedade Anónima Europeia”</a>,
+    Actualidad Jurídica Ibéroamericana, N.º 4, febrero de 2016.
+  </p>
+  <p>
+    Pires, César M. F. 2013. <a target="_blank"
+      href="http://revistas.ulusofona.pt/index.php/rfdulp/article/view/3251">"A lei aplicável à sociedade anónima
+      europeia (societas europaea)" </a>,
+    Revista da Faculdade de Direito da Universidade Lusófona do Porto 2, 2: 117 – 134
+  </p>
+  <p>
+    Pires, César M. F. 2007. "A Oferta Pública de Aquisição Tendente ao Domínio Total", Reflexões-Revista Cientifica
+    da Universidade
+    Lusófona do Porto, 2: 95 - 116 (<a href="/docs/article1.pdf" target="_blank">PDF</a>)
+  </p>
+</section>
+<section class="pt-3">
+  <h3>Projectos Científicos</h3>
+  <p>
+    No âmbito de um projecto conjunto com outros docentes e investigadores criou o ONAT-Observatório Nacional das
+    Actividades de Animação Turística.
+  </p>
+</section>
