--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,30 +1,31 @@
-<div id="home">
-  <section>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="welcome-image">
-          <img src="images/Cesar.png" alt="César Manuel Ferreira Pires" class="img-responsive web-image">
-        </div>
+<div class="row">
+  <div class="col-12 col-sm-4">
+    <div class="welcome-image">
+      <img src="images/Cesar.png" alt="César Manuel Ferreira Pires" class="img-fluid web-image">
+    </div>
+  </div>
+  <div class="col-12 col-sm-8">
+    <div class="pt-4">
+      <h3>Bem-vindo</h3>
+      <div class="welcome-message">
+        <p class="text-justify">
+          César Pires é Licenciado e Mestre em Direito, Pós-graduado em Direito Bancário, da Bolsa e Seguros.
+        </p>
+        <p class="text-justify">
+          César Pires é, também, docente na Universidade Lusófona do Porto (onde leciona Teoria Geral do Direito Civil,
+          Direito Comercial, Direito das Sociedades Comerciais e Direito Internacional Privado), Juiz-árbitro em Tribunais
+          Arbitrais de Consumo, Diretor do “Curso de Preparação para o Exame de Agregação da Ordem dos Advogados” (ULP) e
+          formador na área de Deontologia Profissional.
+        </p>
       </div>
-      <div class="col-md-8">
-          <h2>Bem-vindo</h2>
-        <div class="welcome-message">
-          <p class="text-justify">
-            César Pires é Licenciado e Mestre em Direito, Pós-graduado em Direito Bancário, da Bolsa e Seguros.
-          </p>
-          <p class="text-justify">
-            César Pires é, também, docente na Universidade Lusófona do Porto (onde leciona Teoria Geral do Direito Civil,
-            Direito Comercial, Direito das Sociedades Comerciais e Direito Internacional Privado), Juiz-árbitro em Tribunais
-            Arbitrais de Consumo, Diretor do “Curso de Preparação para o Exame de Agregação da Ordem dos Advogados” (ULP) e
-            formador na área de Deontologia Profissional.
-          </p>
-        </div>
+      <div class="pt-5">
+        <h4>Artigos Linkedin (recentes)</h4>
+        <ul class="text-justify">
+          <li><a target="_blank" href="https://www.linkedin.com/pulse/contratos-modifica%C3%A7%C3%A3o-por-altera%C3%A7%C3%A3o-das-c%C3%A9sar-pires?articleId=6664485156549734400#comments-6664485156549734400&trk=public_profile_article_view">Contratos: A modificação por alteração das circunstâncias</a></li>
+          <li><a target="_blank" href="https://www.linkedin.com/pulse/silk-road-economic-belt-one-c%C3%A9sar-pires?articleId=6635492073787273216#comments-6635492073787273216&trk=public_profile_article_view">“Silk Road Economic Belt / One Belt One Road”</a></li>
+          <li><a target="_blank" href="https://www.linkedin.com/pulse/os-incoterms-2020-complexo-modelo-regulador-da-compra-c%C3%A9sar-pires?articleId=6633695518029684736#comments-6633695518029684736&trk=public_profile_article_view">Os INCOTERMS 2020 no complexo modelo regulador da compra e venda internacional de mercadorias</a></li>
+        </ul>
       </div>
     </div>
-
-
-    <div class="clearfix"></div>
-  </section>
-  <section>
-  </section>
+  </div>
 </div>
