--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-12 col-sm-4">
     <div class="welcome-image">
-      <img src="images/Cesar.png" alt="César Manuel Ferreira Pires" class="img-fluid web-image">
+      <img src="images/CesarPhD.png" alt="César Manuel Ferreira Pires" class="img-fluid web-image">
     </div>
   </div>
   <div class="col-12 col-sm-8">
@@ -9,22 +9,15 @@
       <h3>Bem-vindo</h3>
       <div class="welcome-message">
         <p class="text-justify">
-          César Pires é Licenciado e Mestre em Direito, Pós-graduado em Direito Bancário, da Bolsa e Seguros.
+          César Pires tem cerca de 20 anos de exercício da advocacia. Ao longo do tempo tem vindo a dedicar-se,
+          preferencialmente, às áreas de Direito Civil, Direito Comercial/Empresarial, Direito Europeu e Direito
+          Internacional Privado. Doutor em Direito (ciências jurídico-empresariais) pela Faculdade de Direito da
+          Universidade de Coimbra.
         </p>
         <p class="text-justify">
-          César Pires é, também, docente na Universidade Lusófona do Porto (onde leciona Teoria Geral do Direito Civil,
-          Direito Comercial, Direito das Sociedades Comerciais e Direito Internacional Privado), Juiz-árbitro em Tribunais
-          Arbitrais de Consumo, Diretor do “Curso de Preparação para o Exame de Agregação da Ordem dos Advogados” (ULP) e
-          formador na área de Deontologia Profissional.
+          Juiz-árbitro em Tribunais Arbitrais e investigador no Centro de Investigação em Justiça e Governação (JusGov)
+          da Universidade do Minho.
         </p>
-      </div>
-      <div class="pt-5">
-        <h4>Artigos Linkedin (recentes)</h4>
-        <ul class="text-justify">
-          <li><a target="_blank" href="https://www.linkedin.com/pulse/contratos-modifica%C3%A7%C3%A3o-por-altera%C3%A7%C3%A3o-das-c%C3%A9sar-pires?articleId=6664485156549734400#comments-6664485156549734400&trk=public_profile_article_view">Contratos: A modificação por alteração das circunstâncias</a></li>
-          <li><a target="_blank" href="https://www.linkedin.com/pulse/silk-road-economic-belt-one-c%C3%A9sar-pires?articleId=6635492073787273216#comments-6635492073787273216&trk=public_profile_article_view">“Silk Road Economic Belt / One Belt One Road”</a></li>
-          <li><a target="_blank" href="https://www.linkedin.com/pulse/os-incoterms-2020-complexo-modelo-regulador-da-compra-c%C3%A9sar-pires?articleId=6633695518029684736#comments-6633695518029684736&trk=public_profile_article_view">Os INCOTERMS 2020 no complexo modelo regulador da compra e venda internacional de mercadorias</a></li>
-        </ul>
       </div>
     </div>
   </div>
