--- a/src/app/curriculum/curriculum.component.html
+++ b/src/app/curriculum/curriculum.component.html
@@ -1,47 +1,58 @@
 <section>
-  <h3>Formação académica</h3>
-  <p>Licenciado em Direito.</p>
-  <p>Pós-graduado em “Direito Bancário, da Bolsa e Seguros”.</p>
-  <p>Mestre em Direito.</p>
-  <p>Atualmente, é Doutorando em Direito na Faculdade de Direito da Universidade de Coimbra</p>
+  <h3>Habilitação académica</h3>
+  <p class="text-justify mt-2">Doutoramento em Direito (ramo de ciências jurídico-empresariais) na Faculdade de Direito
+    da
+    Universidade de
+    Coimbra. No âmbito do Doutoramento realizou investigação no UNIDROIT-Instituto Internacional para a Unificação do
+    Direito Privado (em Roma), no Instituto Suíço de Direito Comparado (em Lausanne) e na UNCITRAL (Comissão das Nações
+    Unidas para o Direito Comercial Internacional).</p>
 </section>
 <section class="pt-4">
   <h3>Formação profissional</h3>
-  <p class="mt-2">Curso de Direito do Consumo, promovido pela DECO- Associação Portuguesa para a Defesa do Consumidor. </p>
+  <p class="text-justify mt-2">Pós-graduação em Direito Bancário, da Bolsa e dos Seguros (Faculdade de Direito
+    da Universidade de
+    Coimbra).
+  </p>
+  <p class="text-justify mt-2">Curso de Comércio Internacional pela Câmara de Comércio Internacional (ICC
+    Portugal).</p>
+  <p class="text-justify mt-2">NOVA Summer School on International Arbitration (Faculdade de Direito da
+    Universidade Nova de Lisboa).
+  </p>
+  <p class="text-justify mt-2">Curso de Transporte Rodoviário Internacional (Faculdade de Direito da
+    Universidade de Coimbra).</p>
+  <p class="text-justify mt-2">Curso de Direito do Consumo (DECO- Associação Portuguesa para a Defesa do
+    Consumidor).</p>
 </section>
 <section class="pt-4">
   <h3>Experiência profissional</h3>
   <p class="font-weight-bold">Actual:</p>
   <ol>
-    <li>Advogado com inscrição em vigor.</li>
-    <li>
-      Na <a target="_blank" href="http://www.ulp.pt/" Title="Universidade Lusófona do Porto">Universidade Lusófona do
-        Porto:</a>
-      <ol type="a" style="padding-left: 10px;">
-        <li>Docente: leciona Teoria Geral do Direito Civil, Direito Comercial, Direito das Sociedades Comerciais e
-          Direito Internacional Privado. Anteriormente, lecionou Introdução ao Direito, Introdução ao Direito do
-          Trabalho, Direito do Trabalho e da Segurança Social, Direito das Coisas, Direito Europeu e Direito
-          Internacional Público.
-        </li>
-        <li>Diretor do “Curso de Preparação para o Exame de Agregação da Ordem dos Advogados”; Docente responsável
-          pelo modulo de “Deontologia Profissional”.</li>
-        <li>Assessor da Direção da Faculdade de Direito e Ciência Política (2014-2018);</li>
-        <li>Membro do Conselho Científico da Faculdade de Direito e Ciência Politica (com funções de secretário);</li>
-        <li>Membro do Conselho Pedagógico da Faculdade de Direito e Ciência Politica (com funções de secretário);</li>
-      </ol>
-    </li>
-    <li>Juiz-Árbitro em Tribunais Arbitrais de Consumo (<a href="http://www.ciab.pt/pt" target="_blank">CIAB</a> e <a
-        href="http://www.triave.pt/" target="_blank">TRIAVE</a>).</li>
-    <li>Membro do Conselho Coordenador do ONAT-Observatório Nacional das Atividades de Animação Turística.</li>
-    <li>Formador certificado na área do Direito.</li>
+    <li>Advogado com cerca de 20 anos de exercício.</li>
+    <li>Professor de Direito Civil e de Direito Comercial no Ensino Superior.</li>
+    <li>Juiz-Árbitro em Tribunais Arbitrais.</li>
+    <li>Investigador do Centro de Investigação em Justiça e Governação (JusGov) da Universidade do Minho.</li>
+    <li>Formador certificado (IEFP) na área do Direito.</li>
   </ol>
   <p class="font-weight-bold">Anterior:</p>
   <ol>
-    <li>Vereador da Câmara Municipal de Barcelos no mandato 2009/2013 (com os pelouros atribuídos de Ambiente,
-      Trânsito, Turismo e Artesanato).</li>
+    <li>
+      Na Universidade Lusófona do Porto:
+      <ol type="a" style="padding-left: 10px;">
+        <li>Assistente universitário;
+        </li>
+        <li>Assessor Pedagógico da Direção da Faculdade de Direito e Ciência Política, de dezembro de 2014 a outubro de
+          2018;</li>
+        <li>Membro do Conselho Científico da Faculdade de Direito e Ciência Política, de dezembro de 2014 a julho de
+          2019 (com funções de secretário);</li>
+        <li>Membro do Conselho Pedagógico da Faculdade de Direito e Ciência Política, de dezembro de 2014 a julho de
+          2019 (com funções de secretário);</li>
+        <li>Diretor do Curso de Preparação para o Exame de Agregação da Ordem dos Advogados (3 edições) e Docente
+          responsável pelo módulo de Deontologia Profissional (na 2ª e 3ª edições).</li>
+      </ol>
+    </li>
+    <br>
+    <li>Vereador da Câmara Municipal de Barcelos, no mandato 2009/2013.</li>
     <li>Vice-Presidente do CIAB-Tribunal Arbitral de Consumo no quadriénio 2009/2013.</li>
     <li>Docente do IPCA-Instituto Politécnico do Cávado e Ave em 2008/2009.</li>
-    <li>Membro do GITUR-Grupo de Investigação em Turismo (IPL-Instituto Politécnico de Leiria).</li>
-    <li>Participação em Palestras, Conferências e Congressos, essencialmente no domínio do Direito e do Turismo.</li>
   </ol>
 </section>
